--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -25,16 +25,16 @@
 <div class="offers-list">
   <mat-card class="offer" *ngFor="let offer of offers" [routerLink]="['/', 'offers', offer.id]">
     <mat-card-header>
-      <div class="title">{{offer.title}}</div>
+      <div class="title">{{offer.name}}</div>
     </mat-card-header>
     <mat-card-content>
       <div class="stack">
-        <div *ngFor="let tech of offer.stack">{{tech}}</div>
+        <div *ngFor="let tech of offer.technologies">{{tech}}</div>
       </div>
       <div class="description">{{offer.description}}</div>
       <div class="bottom-desc">
-        <div><div>{{offer.city}}</div><div>{{offer.firm}}</div></div>
-        <div><div>{{offer.mode}}</div><div>{{offer.date | date}}</div></div>
+        <div><div>{{offer.city}}</div><div>{{offer.company.name}}</div></div>
+        <div><div>{{offer.workMode[0].toUpperCase()+offer.workMode.toLowerCase().slice(1)}}</div><div>{{offer.position}}</div></div>
       </div>
     </mat-card-content>
   </mat-card>
