--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -45,3 +45,16 @@ form {
     justify-content: space-between;
   }
 }
+
+.new-offer{
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  width: 35px;
+  height: 35px;
+  font-size: 35px;
+  background: #c2c2c2;
+  border-radius: 2rem;
+  margin: 5px auto;
+}
+
