--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
+<div class="new-offer" *ngIf="httpService.jwtDecoded['role'] === 'pracownik'" [routerLink]="['/', 'new-offer']">
+  <mat-icon>add</mat-icon>
+</div>
 <div class="filter-bars">
   <form [formGroup]="form" (ngSubmit)="onFilter()">
     <mat-form-field>
