--- a/frontend/src/app/dashboard/offer/offer.component.scss
+++ b/frontend/src/app/dashboard/offer/offer.component.scss
@@ -28,6 +28,7 @@
   }
 }
 mat-card {
-  background: #D9D9D9;
-  color: white;
+  background: white;
+  color: gray;
+  box-shadow: 0 0 4px rgba(0,0,0,.3);
 }
